# G1_dirblab

./: .flake8  .gitignore  README.md  config.yaml  environment.yml  main.py  pyproject.toml
.matplotlib_cache/: fontlist-v3.11.0.json  fontlist-v390.json
artifacts/models/: feature_scaler.pkl
artifacts/models/pass_classifier/: pass_logistic_regression.joblib
docs/: data_dictionary.md  event_detector_results_summary.md  master_join_walkthrough.md  pass_logistic_regression_model.md  step2_foundation.md  step3_possession_sequence.md  step4_rule_based_detection.md  training_table_walkthrough.md  xgboost_model_guide.md
notebooks/: ETL.ipynb  data_exploration.ipynb  master_join_walkthrough.ipynb  pass_logistic_regression_model.ipynb  pre_training_table.ipynb  step2_3_match_clock_join.ipynb  step4_rule_based_detection.ipynb  training_table_walkthrough.ipynb  xgboost_pass_detector.ipynb
reports/: training_table_summary_test.csv  training_table_summary_train.csv  training_table_summary_validation.csv
scripts/: create_xgboost_pass_detector_notebook.py
src/driblab/: __init__.py  config.py  validation.py
src/driblab/etl/: __init__.py  master_join.py  pipeline.py
src/driblab/evaluation/: __init__.py  classification.py
src/driblab/features/: __init__.py  match_splits.py  possession_sequence.py  pre_training_table.py  training_table.py
src/driblab/models/: __init__.py  event_detector.py  pass_classifier.py  pass_detector.py  rule_based_detector.py
src/driblab_event_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
