[project]
name = "driblab-event-detection"
version = "0.1.0"
description = "Staged Driblab event-detection pipeline."
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "joblib",
  "matplotlib",
  "pyarrow",
  "pyyaml",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "flake8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
